methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:66: error: not found: value numCarré
  numCarré = numCarré + 1
  ^